--- a/App/prog-02-represent-ndanait/mobile/src/main/AndroidManifest.xml
+++ b/App/prog-02-represent-ndanait/mobile/src/main/AndroidManifest.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.neildanait.myapplication" >
+    package="com.example.neildanait.myapplication">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -53,5 +56,4 @@
             </intent-filter>
         </service>
     </application>
-
 </manifest>
