--- a/App/prog-02-represent-ndanait/mobile/build.gradle
+++ b/App/prog-02-represent-ndanait/mobile/build.gradle
@@ -26,4 +26,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.google.android.gms:play-services:8.1.0'
     compile 'com.android.support:design:23.1.1'
+    compile 'com.koushikdutta.ion:ion:2.+'
+    compile 'org.twitter4j:twitter4j-core:4.0.2'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
